# SSD-Read-Speed-Degen-Test

./: .gitignore  CMakeLists.txt  README.md  build.sh  defaults.cpp  defaults.h  degentest.h  main.cpp  parsopt.cpp  parsopt.h  plotspeedtest.py  readtest.cpp  readtest.h  rundegentest.sh  runfind.cpp  runfind.h  statx.cpp  statx.h  timedread.cpp  timedread.h  usage.cpp  usage.h  version.h  writeresult.cpp  writeresult.h
